# base-fastapi

./: .dockerignore  .env  .env.example  .env.test  .gitignore  Base-fastapi.postman_collection.json  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: pull_request_checks.yml
alembic/: env.py
alembic/versions/: 001_initial.py  1a0f8277f635_initial.py
app/: test_send_mail.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: __init__.py  auth.py  users.py
app/core/: __init__.py  celery_app.py  config.py  enums.py  exceptions.py  middleware.py  response.py  security.py
app/db/: base.py  init_db.py  models.py
app/db/models/: __init__.py  role.py  user.py
app/db/seeders/: base.py  database_seeder.py  role_seeder.py  user_seeder.py
app/dependencies/: __init__.py  auth.py  db.py
app/docs/: README.md
app/docs/api/: auth.md  users.md
app/docs/architecture/: debug.md
app/schemas/: token.py  user.py
app/services/: email.py  user.py
app/tasks/: email_tasks.py  promotion_tasks.py
app/templates/email/: promotion.html  welcome.html
migrations/: env.py
migrations/versions/: 95839e7c98e5_add_vocabulary_tables_for_english_.py  dda1f2add092_create_refresh_token_table.py
src/: __init__.py  main.py  test_send_mail.py
src/api/: __init__.py  auth.py  ping.py  users.py  vocabulary.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: __init__.py  auth.py
src/core/: celery_app.py  config.py  exceptions.py  logging.py  middleware.py  response.py  security.py
src/db/: base.py  init_db.py  init_test_db.py  session.py
src/db/models/: __init__.py  role.py  token.py  user.py  vocabulary.py
src/db/seeders/: database_seeder.py  role_seeder.py  user_seeder.py
src/dependencies/: __init__.py  auth.py
src/docs/: CONTRIBUTING.md  README.md  cursor_steps.md
src/docs/api/: auth.md  users.md
src/docs/architecture/: batch.md  email_system.md  logging.md  testing.md
src/docs/architecture/core/: core_concept.md  middleware.md  request_response.md
src/docs/architecture/devops/: ci_cd.md  testing.md
src/docs/architecture/security/: auth.md
src/schemas/: auth.py  learning_flow.py  token.py  user.py  vocabulary.py
src/services/: ai_service.py  email.py  learning_flow_service.py  spaced_repetition.py  user.py  vocabulary_service.py
src/tasks/: email_tasks.py  promotion_tasks.py
src/templates/email/: reset_password.html
tests/: conftest.py
tests/api/: test_auth.py  test_users.py
